// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostCard /> should render 1`] = `
<Card
  className="post-card shadow rounded overflow-hidden"
>
  <div
    className="bg-gradient-primary-x rounded-top mb-1"
    style={
      Object {
        "height": "5px",
      }
    }
  />
  <div
    className="d-flex flex-column flex-md-row justify-content-between px-2 pb-3 pt-1 border-bottom"
  >
    <div
      className="flex-fill"
    >
      <div
        className="d-flex mb-2"
      >
        <Avatar
          className="flex-shrink-0"
          provider="facebook"
          style={
            Object {
              "height": "45px",
              "width": "45px",
            }
          }
          url="http://foo.com/avatar.jpg"
        />
        <div
          className="ms-1"
        >
          <div
            className="h4 mb-0"
            data-test-id="post-card-date"
          >
            Scheduled for 14:34 on Wednesday, 22 August
          </div>
          <div
            className="text-sm"
          >
            Myah Graham
          </div>
        </div>
      </div>
      <div
        className="mb-2 post-card__content"
        data-test-id="post-card-content"
        onClick={[Function]}
      >
        <Responsive(HTMLEllipsis)
          basedOn="words"
          ellipsisHTML="<span class=\\"text-underline cursor-pointer fw-bold\\">See more</span>"
          innerRef={[Function]}
          maxLine={3}
          unsafeHTML="Buttle UK helped more than 3,000 vulnerable families buy beds for their children last year. It fears thousands more across the UK may lack a bed of their own, leading to problems concentrating in school. The government said its welfare reforms were \\"supporting those who need it most\\"."
        />
      </div>
      <div
        className="d-flex flex-wrap"
      >
        <Tag
          className="d-flex align-items-center mb-1 mb-lg-0 me-1 badge-pill"
          icon="storyBuilder"
        >
          Story: 
          Campaign
        </Tag>
        <Tag
          className="text-xs me-half mb-1 mb-lg-0 "
          icon="tag"
          isOutline={true}
          key="0"
          theme="gray-600"
        >
          charity
        </Tag>
        <Tag
          className="text-xs me-half mb-1 mb-lg-0 "
          icon="tag"
          isOutline={true}
          key="1"
          theme="gray-600"
        >
          social for good
        </Tag>
        <Tag
          className="text-xs me-half mb-1 mb-lg-0 "
          icon="tag"
          isOutline={true}
          key="2"
          theme="gray-600"
        >
          campaigns
        </Tag>
        <Tag
          className="text-xs me-half mb-1 mb-lg-0 "
          icon="tag"
          isOutline={true}
          key="3"
          theme="gray-600"
        >
          lightful
        </Tag>
      </div>
    </div>
    <div
      className="post-card__media-wrap flex-shrink-0"
    >
      <PostMedia
        media={
          Array [
            Object {
              "id": "af712270-b03e-4b1c-98d2-f744f807df2f",
              "type": "image",
              "url": "http://lorempixel.com/640/480",
            },
          ]
        }
      />
    </div>
  </div>
  <div
    className="pt-2 pb-3 px-2 d-flex flex-column flex-md-row align-items-center justify-content-between"
  >
    <div
      className="d-flex align-items-center flex-wrap mt-1 mt-md-0 mb-2 mb-md-0"
    >
      <div
        className="d-flex align-items-center text-sm me-1"
        data-test-id="post-card-metric"
        key="likes"
      >
        <Icon
          className="me-half"
          isActive={true}
          name="like"
          size={20}
        />
         
        10
         
        likes
      </div>
      <div
        className="d-flex align-items-center text-sm me-1"
        data-test-id="post-card-metric"
        key="shares"
      >
        <Icon
          className="me-half"
          isActive={true}
          name="share"
          size={20}
        />
         
        5
         
        shares
      </div>
    </div>
    <div
      className="d-flex flex-wrap"
    />
  </div>
</Card>
`;

exports[`<PostCard /> should render with errors 1`] = `
<Card
  className="post-card shadow rounded overflow-hidden"
>
  <div
    className="bg-gradient-primary-x rounded-top mb-1"
    style={
      Object {
        "height": "5px",
      }
    }
  />
  <div
    className="mb-1"
  >
    <Alert
      className="mx-2 mb-1"
      key="0"
      theme="danger"
    >
      foo
    </Alert>
    <Alert
      className="mx-2"
      key="1"
      theme="danger"
    >
      bar
    </Alert>
  </div>
  <div
    className="d-flex flex-column flex-md-row justify-content-between px-2 pb-3 pt-1 border-bottom"
  >
    <div
      className="flex-fill"
    >
      <div
        className="d-flex mb-2"
      >
        <Avatar
          className="flex-shrink-0"
          provider="facebook"
          style={
            Object {
              "height": "45px",
              "width": "45px",
            }
          }
          url="http://foo.com/avatar.jpg"
        />
        <div
          className="ms-1"
        >
          <div
            className="h4 mb-0"
            data-test-id="post-card-date"
          >
            Scheduled for 14:34 on Wednesday, 22 August
          </div>
          <div
            className="text-sm"
          >
            Myah Graham
          </div>
        </div>
      </div>
      <div
        className="mb-2 post-card__content"
        data-test-id="post-card-content"
        onClick={[Function]}
      >
        <Responsive(HTMLEllipsis)
          basedOn="words"
          ellipsisHTML="<span class=\\"text-underline cursor-pointer fw-bold\\">See more</span>"
          innerRef={[Function]}
          maxLine={3}
          unsafeHTML="Buttle UK helped more than 3,000 vulnerable families buy beds for their children last year. It fears thousands more across the UK may lack a bed of their own, leading to problems concentrating in school. The government said its welfare reforms were \\"supporting those who need it most\\"."
        />
      </div>
      <div
        className="d-flex flex-wrap"
      >
        <Tag
          className="d-flex align-items-center mb-1 mb-lg-0 me-1 badge-pill"
          icon="storyBuilder"
        >
          Story: 
          Campaign
        </Tag>
        <Tag
          className="text-xs me-half mb-1 mb-lg-0 "
          icon="tag"
          isOutline={true}
          key="0"
          theme="gray-600"
        >
          charity
        </Tag>
        <Tag
          className="text-xs me-half mb-1 mb-lg-0 "
          icon="tag"
          isOutline={true}
          key="1"
          theme="gray-600"
        >
          social for good
        </Tag>
        <Tag
          className="text-xs me-half mb-1 mb-lg-0 "
          icon="tag"
          isOutline={true}
          key="2"
          theme="gray-600"
        >
          campaigns
        </Tag>
        <Tag
          className="text-xs me-half mb-1 mb-lg-0 "
          icon="tag"
          isOutline={true}
          key="3"
          theme="gray-600"
        >
          lightful
        </Tag>
      </div>
    </div>
    <div
      className="post-card__media-wrap flex-shrink-0"
    >
      <PostMedia
        media={
          Array [
            Object {
              "id": "af712270-b03e-4b1c-98d2-f744f807df2f",
              "type": "image",
              "url": "http://lorempixel.com/640/480",
            },
          ]
        }
      />
    </div>
  </div>
  <div
    className="pt-2 pb-3 px-2 d-flex flex-column flex-md-row align-items-center justify-content-between"
  >
    <div
      className="d-flex align-items-center flex-wrap mt-1 mt-md-0 mb-2 mb-md-0"
    >
      <div
        className="d-flex align-items-center text-sm me-1"
        data-test-id="post-card-metric"
        key="likes"
      >
        <Icon
          className="me-half"
          isActive={true}
          name="like"
          size={20}
        />
         
        10
         
        likes
      </div>
      <div
        className="d-flex align-items-center text-sm me-1"
        data-test-id="post-card-metric"
        key="shares"
      >
        <Icon
          className="me-half"
          isActive={true}
          name="share"
          size={20}
        />
         
        5
         
        shares
      </div>
    </div>
    <div
      className="d-flex flex-wrap"
    />
  </div>
</Card>
`;
